<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBrown"
    tools:context=".Activity.SignIn">

    <android.support.constraint.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp30"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/dp20"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="20dp" />

    <TextView
        android:id="@+id/tvNameActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20"
        android:text="@string/sign_in"
        style="@style/TextStyle26"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="parent" />

    <com.nguyenoanh.compass.CustomView.RounedImageView
        android:id="@+id/imv_avatar"
        android:layout_width="@dimen/dp150"
        android:layout_height="@dimen/dp150"
        android:layout_marginTop="@dimen/dp50"
        card_view:cardCornerRadius="@dimen/dp75"
        app:layout_constraintDimensionRatio="w,1:1"
        android:src="@drawable/andrew_pic_2"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/tvNameActivity" />

    <EditText
        android:id="@+id/edt_email"
        style="@style/TextStyle"
        android:layout_width="@dimen/dp0"
        android:layout_height="@dimen/dp60"
        android:layout_marginTop="@dimen/dp50"
        android:background="@color/colorWhite"
        android:padding="@dimen/dp10"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/imv_avatar"
        tools:ignore="Autofill" />


    <EditText
        android:id="@+id/edt_pass"
        style="@style/TextStyle"
        android:layout_width="@dimen/dp0"
        android:layout_height="@dimen/dp60"
        android:layout_marginTop="@dimen/dp20"
        android:background="@color/colorWhite"
        android:padding="@dimen/dp10"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        tools:ignore="Autofill" />

    <ImageView
        android:id="@+id/checkBox"
        android:layout_width="@dimen/dp34"
        android:layout_height="@dimen/dp30"
        android:layout_marginTop="@dimen/dp30"
        android:background="@drawable/ic_checkbox"
        android:checked="true"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/edt_pass"
        android:contentDescription="@string/remember_me" />

    <TextView
        android:id="@+id/tv_name_checkbox"
        style="@style/TextStyle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/checkBox"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toTopOf="@+id/checkBox" />

    <Button
        android:id="@+id/button"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp70"
        android:layout_marginTop="@dimen/dp50"
        android:layout_marginEnd="@dimen/dp70"
        android:background="@drawable/rectangle_shape"
        android:text="@string/sign_in"
        android:textColor="@color/colorWhite_five"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/tv_forget_pass"
        style="@style/TextStyle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp30"
        tools:text="@string/forgot_password"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/button"/>

</android.support.constraint.ConstraintLayout>